# fnox

./: Cargo.toml  flake.nix
providers/: aws-kms.toml  aws-ps.toml  aws-sm.toml  azure-kms.toml  azure-sm.toml  fido2.toml  gcp-kms.toml  gcp-sm.toml  keepass.toml  keychain.toml  passwordstate.toml  yubikey.toml
src/: config.rs  env.rs  error.rs  lib.rs  main.rs
src/commands/: activate.rs  exec.rs  export.rs  get.rs  import.rs  mod.rs
src/commands/provider/: add.rs  mod.rs
src/lease_backends/: mod.rs
src/providers/: hw_encrypt.rs  mod.rs  resolver.rs
src/shell/: nushell.rs
