[package]
name = "fnox"
version = "1.21.0"
edition = "2024"
authors = ["@jdx"]
description = "A flexible secret management tool supporting multiple providers and encryption methods"
license = "MIT"
repository = "https://github.com/jdx/fnox"
readme = "README.md"
rust-version = "1.91.1"

[[bin]]
name = "fnox"
path = "src/main.rs"

[features]
aws = ["dep:aws-config", "dep:aws-sdk-kms", "dep:aws-sdk-secretsmanager", "dep:aws-sdk-ssm", "dep:aws-sdk-sts"]
azure = ["dep:azure_core", "dep:azure_identity", "dep:azure_security_keyvault_keys", "dep:azure_security_keyvault_secrets"]
gcp = ["dep:gcp_auth", "dep:google-cloud-kms", "dep:google-cloud-secretmanager-v1"]
keepass = ["dep:keepass"]
fido2 = ["dep:ctap-hid-fido2"]
keychain = ["dep:keyring", "dep:dbus"]
mcp = ["dep:rmcp"]
full = ["aws", "azure", "gcp", "keepass", "fido2", "keychain", "mcp"]

[dependencies]
aes-gcm = "0.11.0-rc.3"
age = { version = "0.11", features = ["ssh"] }
aho-corasick = "1.1.4"
anyhow = "1"
arboard = "3"
arc-swap = "1"
async-trait = "0.1"
atty = "0.2"
aws-config = { version = "1", features = ["sso", "credentials-process", "credentials-login"], optional = true }
aws-sdk-kms = { version = "1", optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-sdk-ssm = { version = "1", optional = true }
aws-sdk-sts = { version = "1", optional = true }
azure_core = { version = "0.30", optional = true }
azure_identity = { version = "0.30", optional = true }
azure_security_keyvault_keys = { version = "0.9", optional = true }
azure_security_keyvault_secrets = { version = "0.9", optional = true }
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
ci_info = "0.14"
clap = { version = "4", features = ["derive", "env"] }
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
ctap-hid-fido2 = { version = "3", optional = true }
data-encoding = "2"
demand = "2"
dirs = "6"
fslock = "0.2"
futures = "0.3"
gcp_auth = { version = "0.12", optional = true }
google-cloud-kms = { version = "0.6", optional = true }
google-cloud-secretmanager-v1 = { version = "1.1", optional = true }
hex = "0.4"
hkdf = "0.13"
indexmap = { version = "2", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
keepass = { version = "0.10", features = ["save_kdbx4"], optional = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"], optional = true }
miette = { version = "7", features = ["fancy"] }
miniz_oxide = "0.9"
nix = { version = "0.31", features = ["signal", "process"] }
pluralizer = "0.5"
rand = "0.10"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"], optional = true }
rmp-serde = "1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
schemars = { version = "1", features = ["indexmap2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_spanned = "1"
serde_yaml = "0.9"
sha2 = "0.11"
shellexpand = "3"
shlex = "1"
signal-hook = "0.4"
strsim = "0.11"
strum = { version = "0.28", features = ["derive"] }
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml_edit = { version = "0.25", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
usage-lib = { version = "3", features = ["clap"] }
walkdir = "2"
which = "8"
xx = { version = "2", features = ["fslock"] }
libloading = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", features = ["vendored"], optional = true }
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
clap-sort = "1"
tempfile = "3"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
toml_edit = { version = "0.25", features = ["serde"] }
